# fdb-sim-visualizer

./: .gitignore  Cargo.toml  CombinedNemesis.toml  README.md  event.md  flake.nix
.github/workflows/: nix-simulation-ci.yml  rust-ci.yml
cli/: Cargo.toml
cli/src/: main.rs  tui.rs
parser/: Cargo.toml
parser/src/: lib.rs  parser.rs  report.rs
scripts/: run_simulation.sh
testfiles/: Attritions.toml  DiskFailureCycle.toml
