[package]
name = "fdb-sim-visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "1.0.61"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
humantime = "2.1.0"
ratatui = { version = "0.27.0", features = ["all-widgets", "crossterm"] } 
crossterm = "0.27.0"
