[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] } # Restored arbitrary_precision
thiserror = "1.0"
regex = "1.10" # Added regex dependency

[dev-dependencies]
tempfile = "3.10"
